--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.3",
     "react-router-hash-link": "^2.4.3",
     "react-use-scrollspy": "^3.1.1"
   },
